# Star

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Star.sln  main.cpp
Kernels/: Common.cl  Reflection.cl  Render.cl  Sampling.cl  base.cl  bvh.cl  tools.cl  types.cl
Res/: CornellBox.gltf  cube.gltf  monkey.gltf  monkey.gltf.glb  scene1.glb  test.gltf
Res/Shader/: debug.fs  debug.vs  default.fs  default.vs  texture.fs  texture.vs
Resources/Scenes/: CornellBox.gltf
Resources/Shaders/: accm.comp  accum.comp  display.frag  display.vert  trace.comp
Resources/Shaders/ray/: data.glsl
Source/: BVH.h  CommonMath.h  FileUtils.cpp  FileUtils.h  Importer.cpp  Importer.h  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sources.cmake  TriangleMesh.cpp  TriangleMesh.h
Source/Accelerator/: BBox.cpp  BBox.h  Bvh.cpp  Bvh.h  BvhTranslator.cpp  BvhTranslator.h
Star/: BBox.h  BVH.cpp  BVH.h  Base.h  Camera.cpp  Camera.h  DebugDraw.h  GMath.h  Intersection.h  Model.cpp  Model.h  Node.cpp  Node.h  Primitive.cpp  Primitive.h  Ray.h  Scene.cpp  Scene.h  ShaderProgram.h  Star.vcxproj  Star.vcxproj.filters  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h  main.cpp
Star/Input/: Input.h
Star/InputSystem/: KeyCode.h
Star/cl/: CLCore.h  CLDatas.h  CLTools.h  CoreCL.cpp  CoreCL.h  DataCL.cpp  DataCL.h  RendererCL.cpp  RendererCL.h
Star/common/: SceneData.cpp  SceneData.h  Window.cpp  Window.h
Star/glad/: glad.c  glad.h
Star/math/: GMath.h
Star/tools/: Module.h  Tools.cpp  Tools.h
